# webshooter

./: .gitignore  .gitmodules  Cargo.toml  flake.nix  ipc_id.txt  readme.md  shell.nix
.zed/: debug.json
authorise/: config.json
authorize/: config.json
cli/: Cargo.toml
exit/: config.json  server.crt  server.key
server/: Cargo.toml
server/src/: auth.rs  client_datagram.rs  compositor_discovery.rs  config.rs  config_watch.rs  error.rs  extensions.rs  frontend.rs  input.rs  ipc.rs  keyboard.rs  logging.rs  main.rs  pipewire.rs  portal_auth.rs  server_datagram.rs  session.rs  sources.rs  video.rs  video_serve.rs  warp_ex.rs  wt.rs
server/src/pipewire/: audio.rs  eis.rs  eis_keyboard.rs  gamepad.rs  mod.rs  pointer.rs  portal_auth.rs  sources.rs  touch.rs  video.rs
shared/: Cargo.toml
shared/src/: client_datagram.rs  codec.rs  lib.rs  server_datagram.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: ClientMessage.ts  auth.ts  base64.ts  extensions.ts  input.ts  main.ts  serverMessage.ts  style.css  video.ts  wt.ts
ui/wasm/: Cargo.toml
ui/wasm/src/: input.rs  lib.rs  log.rs  video.rs
webui/: index.html  pnpm-workspace.yaml
webui/src/: main.ts
webui/wasm/: Cargo.toml
webui/wasm/src/: audio.rs  gamepad.rs  input.rs  lib.rs  receiver.rs  transport.rs  video.rs
