[workspace]
resolver = "2"
members = ["server", "shared", "ui/wasm"]
default-members = ["server"]

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/lirannl/webshooter"
license = "LICENSE"

[workspace.dependencies]
shared = { path = "shared", package = "webshooter-shared" }

anyhow = "1"
aes = "0.9"
ashpd = "0.13"
async-channel = "2.5"
bitflags = "2"
bytes = "1.11"
data-encoding = "2.11"
ecdsa = "0.16.9"
futures-util = "0.3"
gstreamer = "0.25"
gstreamer-app = "0.25"
http = "1.4"
http-bytes = { version = "0.1.0", default-features = false }
interprocess = "2.4"
js-sys = "0.3"
lazy_static = "1.5"
libc = "0.2"
mime_guess = "2.0"
notify = "8.2"
p384 = "0.13"
pipewire = "^0.9"
poem = "3.1"
rand = "0.10"
rcgen = "0.14"
regex = "1.12"
reis = "0.6"
reqwest = "0.13"
ring = "0.17"
rmp-serde = "1.3"
rust-embed = "8"
rustls = "0.23"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = "1.52"
tokio-scoped = "0.2.0"
tokio-util = "0.7.18"
toml = "1"
ts-rs = "12.0"
untrusted = "0.9.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wtransport = "0.7"
