[workspace]
resolver = "2"
members = ["server", "shared", "webui/wasm"]
default-members = ["server"]

[workspace.package]
edition = "2024"
version = "0.8.0"
repository = "https://github.com/lirannl/webshooter"
license = "LICENSE"

[workspace.dependencies]
shared = { path = "shared", package = "webshooter-shared" }

anyhow = "1"
aes = "0.9"
ashpd = "0.13"
async-channel = "2.5"
bitflags = "2"
bytes = "1.12"
data-encoding = "2.11"
ecdsa = "0.17"
futures-util = "0.3"
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
http = "1.4"
http-bytes = { version = "0.1.0", default-features = false }
interprocess = "2.4"
js-sys = "0.3"
libc = "0.2"
mime_guess = "2.0"
notify = "8.2"
p384 = "0.14"
pipewire = "^0.9"
salvo = { version = "0.95", features = ["quinn", "rustls", "serve-static"] }
rand = "0.10"
regex = "1.13"
reis = "0.7"
reqwest = "0.13"
ring = "0.17"
inputtino = { git = "https://github.com/games-on-whales/inputtino", rev = "b887f6a" }
rmp-serde = "1.3"
rust-embed = "8"
rustls = "0.23"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = "1.52"
tokio-scoped = "0.2.0"
tokio-util = "0.7.18"
toml = "1"
ts-rs = "12.0"
untrusted = "0.9.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
x509-parser = "0.18"
tokio-stream = "0.1"
web-sys = "0.3"
named_constants = { git = "https://github.com/lirannl/named_constants", rev = "16bbad860fe868ec63030ae1ece0fa7bab341f42" }
