[package]
name = "webshooter"
edition.workspace = true
version.workspace = true
author.workspace = true
repository.workspace = true

[features]
debug = []

[dependencies]
ashpd = { version = "0.13", features = [
    "pipewire",
    "remote_desktop",
    "screencast",
] }
rust-embed = { version = "8", features = ["poem", "mime-guess"] }
aes = "0.9"
anyhow = "1.0"
bitflags = "2"
async-channel = "2.5"
bytes = { version = "1.11", features = ["serde"] }
ecdsa = { version = "0.16.9", features = ["spki", "verifying"] }
futures-util = "0.3"
data-encoding = "2.11"
http = "1.4"
http-bytes = { version = "0.1.0", default-features = false, features = [
    "base64",
] }
lazy_static = "1.5"

mime_guess = "2.0"
notify = "8.2"
p384 = "0.13"
poem = { version = "3.1", features = [
    "rustls",
    "tokio-rustls",
    "static-files",
] }
rand = "0.10"
rcgen = "0.14"
regex = "1.12"
reqwest = "0.13"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
toml = "1"
ts-rs = "12.0"
untrusted = "0.9.0"
wtransport = "0.7"
ring = "0.17"
interprocess = { version = "2.4", features = ["tokio"] }
rmp-serde = "1.3"
pipewire = { version = "^0.9" }
tokio-scoped = "0.2.0"
tokio-util = "0.7.18"
gstreamer = "0.25"
gstreamer-app = "0.25"
