[package]
name = "webshooter"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Webshooter server"

[features]
debug = []
inputtino = ["dep:inputtino"]

[dependencies]
inputtino = { workspace = true, optional = true }
ashpd = { workspace = true, features = ["pipewire", "remote_desktop", "screencast"] }
rust-embed = { workspace = true, features = ["poem", "mime-guess"] }
aes.workspace = true
anyhow.workspace = true
bitflags.workspace = true
libc.workspace = true
async-channel.workspace = true
bytes = { workspace = true, features = ["serde"] }
ecdsa = { workspace = true, features = ["spki", "verifying"] }
futures-util.workspace = true
data-encoding.workspace = true
http.workspace = true
http-bytes = { workspace = true, default-features = false, features = ["base64"] }
lazy_static.workspace = true
mime_guess.workspace = true
notify.workspace = true
p384.workspace = true
poem = { workspace = true, features = ["rustls", "tokio-rustls", "static-files"] }
rand.workspace = true
rcgen.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
toml.workspace = true
ts-rs.workspace = true
untrusted.workspace = true
wtransport.workspace = true
ring.workspace = true
interprocess = { workspace = true, features = ["tokio"] }
rmp-serde.workspace = true
pipewire.workspace = true
shared.workspace = true
tokio-scoped.workspace = true
tokio-util.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
reis = { workspace = true, features = ["tokio"] }
