[package]
name = "webshooter"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Webshooter server"

[features]
debug = []

[target.'cfg(target_os = "linux")'.dependencies]
inputtino = { workspace = true }

[dependencies]
ashpd = { workspace = true, features = [
    "pipewire",
    "remote_desktop",
    "screencast",
] }
aes.workspace = true
anyhow.workspace = true
salvo-http3 = "0.7"
bitflags.workspace = true
libc.workspace = true
async-channel.workspace = true
bytes = { workspace = true, features = ["serde"] }
ecdsa = { workspace = true, features = ["spki"] }
futures-util.workspace = true
data-encoding.workspace = true
http.workspace = true
http-bytes = { workspace = true, default-features = false, features = [
    "base64",
] }
mime_guess.workspace = true
notify.workspace = true
p384.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
salvo.workspace = true
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
toml.workspace = true
ts-rs.workspace = true
untrusted.workspace = true
ring.workspace = true
interprocess = { workspace = true, features = ["tokio"] }
rmp-serde.workspace = true
pipewire.workspace = true
shared.workspace = true
tokio-scoped.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
x509-parser.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true
reis = { workspace = true, features = ["tokio"] }
