[package]
name = "webshooter-shared"
edition.workspace = true
version = "0.1.0"
author.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
http = "1.1.0"
bytes = "1.6.0"
serde_json = "1.0.116"
serde_with = { version = "3.8.0", features = ["base64"] }
openidconnect = "3.5.0"
