[package]
name = "webshooter-shared"
edition.workspace = true
version = "0.1.0"
author.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
http = "1.1.0"
bytes = "1.6.0"
serde_json = "1.0.116"
openidconnect = "3.5.0"
data-encoding = "2.6.0"
