[package]
name = "webshooter-wasm"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Wasm client for webshooter"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "AddEventListenerOptions",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "HtmlElement",
    "Element",
    "Navigator",
    "Location",
    "MediaSource",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "VideoFrame",
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioData",
    "AudioDataCopyToOptions",
    "AudioSampleFormat",
    "AudioDecoder",
    "AudioDecoderConfig",
    "AudioDecoderInit",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "AudioNode",
    "AudioDestinationNode",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportDatagramDuplexStream",
    "WebTransportSendStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "Performance",
    "ResizeObserver",
    "TouchEvent",
    "Touch",
    "TouchList",
    "KeyboardEvent",
    "PointerEvent",
    "Gamepad",
    "GamepadButton",
    "DeviceMotionEvent",
    "DeviceAcceleration",
    "DeviceRotationRate",
    "MouseEvent",
    "WheelEvent",
    "console",
    "Request",
    "Response",
    "Headers",
    "CloseEvent",
    "DomRect",
    "DomRectReadOnly",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Text",
] }
shared.workspace = true
